--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -12,12 +12,12 @@ strategy:
   matrix:
     Python27:
       python.version: '2.7'
-    Python35:
-      python.version: '3.5'
-    Python36:
-      python.version: '3.6'
-    Python37:
-      python.version: '3.7'
+    # Python35:
+    #   python.version: '3.5'
+    # Python36:
+    #   python.version: '3.6'
+    # Python37:
+    #   python.version: '3.7'
 
 steps:
 - task: UsePythonVersion@0
@@ -34,3 +34,7 @@ steps:
     pip install pytest pytest-azurepipelines
     pytest
   displayName: 'pytest'
+
+- script: |
+    flake8 --ignore=C901,E113,E128,E116,E402,E711,E731,E401,E501,W503,W293,W391,F401,E722 .
+  displayName: 'flake8'
