--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -18,6 +18,9 @@ strategy:
     #   python.version: '3.6'
     # Python37:
     #   python.version: '3.7'
+container:
+  image: eylregistry.azurecr.io/sphinx-pdf
+  endpoint: eylregistry  
 
 steps:
 - task: UsePythonVersion@0
@@ -30,11 +33,15 @@ steps:
     pip install -r requirements.txt
   displayName: 'Install dependencies'
 
-- script: |
-    pip install pytest pytest-azurepipelines
-    pytest
-  displayName: 'pytest'
+# - script: |
+#     pip install pytest pytest-azurepipelines
+#     pytest
+#   displayName: 'pytest'
 
 - script: |
     flake8 --ignore=C901,E113,E128,E116,E402,E711,E731,E401,E501,W503,W293,W391,F401,E722 .
   displayName: 'flake8'
+
+steps:
+- script: hostname -i
+  target: sphinx-pdf
