--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -14,6 +14,12 @@ stages:
       vmImage: 'ubuntu-latest'
     steps:
     - script: echo Test!
+    - script: |
+        echo hi
+        ls -l
+        pwd
+        hostname -i
+        uname -r
 # - stage: Test
 #   jobs:
 #   - job: TestOnWindows
@@ -32,7 +38,12 @@ stages:
       runOnce:
         deploy:
           steps:
-            - script: echo hi
+            - script: |
+                echo hi
+                ls -l
+                pwd
+                hostname -i
+                uname -r
 
 # pool:
 #   vmImage: 'ubuntu-latest'
