--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -29,13 +29,9 @@ stages:
         archiveFile: '$(Build.ArtifactStagingDirectory)/$(Build.BuildId).tgz'
         replaceExistingArchive: true
         verbose: true
-    - task: PublishPipelineArtifact@1
-      inputs:
-        targetPath: '$(Pipeline.Workspace)/$(Build.BuildId).tgz'
-        publishLocation: 'pipeline'
-    # - publish: $(Build.ArtifactStagingDirectory)/$(Build.BuildId).tgz
-    #   displayName: 'Upload package'
-    #   artifact: drop
+    - publish: $(Build.ArtifactStagingDirectory)/$(Build.BuildId).tgz
+      displayName: 'Upload package'
+      artifact: artifacts
     - script: |
         echo hi
         ls -l
@@ -60,7 +56,7 @@ stages:
               displayName: 'echo var'
             - task: ExtractFiles@1
               inputs:
-                archiveFilePatterns: '$(Pipeline.Workspace)/$(Build.BuildId).tgz'
+                archiveFilePatterns: '$(Pipeline.Workspace)/artifacts/$(Build.BuildId).tgz'
                 destinationFolder: '$(Pipeline.Workspace)'
                 cleanDestinationFolder: false
             - script: |
